--- a/cm-front/src/app/presenter/views/home/home.component.html
+++ b/cm-front/src/app/presenter/views/home/home.component.html
@@ -1,12 +1,3 @@
-<p>home works!</p>
-<p>home works!</p>
-
-<p>home works!</p>
-<p>home works!</p>
-
-<p>home works!</p>
-
-
-<button routerLink="../login">
-GO TO LOGIN
-</button>
+<div>
+    <h2>Dashboard</h2>
+</div>
